--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="games.css">
-</head>
-<body>
+    <link rel="stylesheet" href="games.css" />
+  </head>
+  <body>
     <div class="container">
+      <div class="container-head">
         <h2 class="head"></h2>
 
         <div id="inputDiv">
-            <select name="sort" id="input">
-                <option value="all">All</option>
-                <option value="rating">Rating</option>
-                <option value="sold">Copies Sold</option>
-                <option value="year">Released Year</option>
-                <option value="alpha">A-Z</option>
-                <option value="costLow">Cost: Low to High</option>
-                <option value="costHigh">Cost: High to Low</option>
-            </select>
+          <select name="sort" id="input">
+            <option value="all">All</option>
+            <option value="rating">Rating</option>
+            <option value="sold">Copies Sold</option>
+            <option value="year">Released Year</option>
+            <option value="alpha">A-Z</option>
+            <option value="costLow">Cost: Low to High</option>
+            <option value="costHigh">Cost: High to Low</option>
+          </select>
 
-            <button id="btn"></button>
-
+          <button id="btn"></button>
         </div>
+      </div>
 
-        <hr>
-        
-        <!-- <div id="result">
+      <!-- <hr> -->
+
+      <!-- <div id="result">
             <div class="g1">
                 <img src="got.jpg" alt="">
                 <h3>Ghost of Tsushima</h3>
@@ -72,5 +73,5 @@
     </div>
 
     <script src="games.js"></script>
-</body>
+  </body>
 </html>
